feature: Classroom Schedule Improvements (#37)
* Edit classroom schedule

* Classroom Schedule start + end time

* Schedule Adhoc and Cancelled

* FIx
